--- a/lsp/index.html
+++ b/lsp/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to Vue</title>
-  <script src="http://localhost:8080/dist.js"></script>
+  <title>MistServer MI</title>
+  <script src="/dist.js"></script>
 </head>
 <body>
   <div id="app">
